Bug 138450 - BitmapEx.Replace() is not working
Summary: BitmapEx.Replace() is not working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-24 10:54 UTC by Heiko Tietze
Modified: 2020-12-15 09:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2020-11-24 10:54:54 UTC
Follow-up to bug 138350: specific icon background is supposed to be replaced but isn't, see attachment 167406 [details]. 

svx/source/dialog/frmsel.cxx -> FrameSelectorImpl::InitArrowImageList()
aBmpEx.Replace(pColorAry1, pColorAry2, 3);

Tested with gen, gtk3, kf5 on Linux.
Comment 1 Xisco Faulí 2020-12-09 08:53:49 UTC
Moving to NEW. Heiko knows what he is doing
Comment 2 Heiko Tietze 2020-12-09 08:56:34 UTC
(In reply to Xisco Faulí from comment #1)
> Heiko knows what he is doing

Me only knows how to poke QA ;-). Ideally we can bisect the issue.
Comment 3 Xisco Faulí 2020-12-09 09:01:15 UTC
then, explain the steps to reproduce...
Comment 4 Heiko Tietze 2020-12-09 09:05:56 UTC
(In reply to Xisco Faulí from comment #3)
> then, explain the steps to reproduce...

Open the dialog. For example in the paragraph property dialog at the tab "Borders".
Comment 5 Caolán McNamara 2020-12-09 19:49:55 UTC
bug probably introduced with...

commit abd42bdc86904d1b310e8298393c887e0c195499
Date:   Thu Nov 12 14:50:16 2020 +0200

    tools::Long->sal_Int32 in vcl filters
Comment 6 Caolán McNamara 2020-12-09 19:54:46 UTC
https://gerrit.libreoffice.org/c/core/+/107503
Comment 7 Commit Notification 2020-12-10 08:55:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/07779718407b1aec4717fb97ee7d6cedfa121823

tdf#138450 BitmapEx.Replace() is not working

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-12-10 09:37:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/da71f806ad09ace88c509a9af7346f0e3f29b744

tdf#138450 BitmapEx.Replace() is not working

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Heiko Tietze 2020-12-15 09:40:34 UTC
*** Bug 138845 has been marked as a duplicate of this bug. ***