tdf#138450 BitmapEx.Replace() is not working

since...

commit abd42bdc86904d1b310e8298393c887e0c195499
Date:   Thu Nov 12 14:50:16 2020 +0200

    tools::Long->sal_Int32 in vcl filters

Change-Id: I4a74416547f35a9b5b3fe606de6938245d3ec6c8